tests/baselines/reference/parserIndexSignature9.errors.txt
parserIndexSignature9.ts(2,4): error TS1096: An index signature must have exactly one parameter.


==== parserIndexSignature9.ts (1 errors) ====
    interface I {
       []: number
       ~~~~~~~~~~
!!! error TS1096: An index signature must have exactly one parameter.
    }